导航动画（已修改）

--- a/50projects/animated-navigation/style.css
+++ b/50projects/animated-navigation/style.css
@@ -1,62 +1,105 @@
+@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
+
 * {
     box-sizing: border-box;
 }
 
 body {
-    position: relative;
+    background-color: #eafbff;
+    background-image: linear-gradient(to bottom,
+            #eafbff 0%,
+            #eafbff 50%,
+            #5290f9 50%,
+            #5290f9 100%);
+    font-family: 'Muli', sans-serif;
     display: flex;
-    justify-content: center;
-    overflow: hidden;
     align-items: center;
+    justify-content: center;
     height: 100vh;
-    width: 100vw;
     margin: 0;
 }
 
-.top {
-    position: absolute;
-    top: 0;
-    height: 50vh;
-    width: 100vw;
-    background-color: #eafbff;
-    z-index: -1;
-}
-
-.bottom {
-    position: absolute;
-    top: 50vh;
-    height: 50vh;
-    width: 100vw;
-    background-color: #5290f9;
-    z-index: -1;
-}
-
-.container {
-    width: 400px;
-    height: 80px;
+nav {
     background-color: #fff;
-    box-shadow: 1px 3px 1px rgba(0, 0, 0, 0.1);
-    border-radius: 2px;
+    padding: 20px;
+    width: 80px;
     display: flex;
-    justify-content: center;
     align-items: center;
-    text-align: center;
-    transition: all 1s ease;
+    justify-content: center;
+    border-radius: 3px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+    transition: width 0.6s linear;
+    overflow-x: hidden;
 }
 
-.container span {
-    flex: 1;
+nav.active {
+    width: 350px;
 }
 
-.container i {
-    flex: 1;
-    color: skyblue;
+nav ul {
+    display: flex;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    width: 0;
+    transition: width 0.6s linear;
 }
 
-.container.close {
-    width: 100px;
+nav.active ul {
+    width: 100%;
 }
 
-.container.close span {
-    display: none;
+nav ul li {
+    transform: rotateY(0deg);
+    opacity: 0;
+    transition: transform 0.6s linear, opacity 0.6s linear;
+}
+
+nav.active ul li {
+    opacity: 1;
+    transform: rotateY(360deg);
+}
+
+nav ul a {
+    position: relative;
+    color: #000;
+    text-decoration: none;
+    margin: 0 10px
+}
+
+.icon {
+    background-color: #fff;
+    border: 0;
+    cursor: pointer;
+    padding: 0;
+    position: relative;
+    height: 30px;
+    width: 30px;
+}
+
+.icon:focus {
+    outline: 0;
+}
+
+.icon .line {
+    background-color: #5290f9;
+    height: 2px;
+    width: 20px;
+    position: absolute;
+    top: 10px;
+    left: 5px;
+    transition: transform 0.6s linear;
+}
+
+.icon .line2 {
+    top: auto;
+    bottom: 10px;
+}
+
+nav.active .icon .line1 {
+    transform: rotate(-765deg) translateY(5.5px);
+}
+
+nav.active .icon .line2 {
+    transform: rotate(765deg) translateY(-5.5px);
 }
